# nftui

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
src/: app.rs  diagram.rs  main.rs  tui.rs
src/nftui-lib/: Cargo.toml
