[package]
name = "nftui"
edition = "2021"
version = "0.1.0"
authors = ["Michael Yang <admin@my4ng.dev>"]
description = "A TUI application for managing nftables"
homepage = "https://github.com/my4ng/nftui"
repository = "https://github.com/my4ng/nftui"
readme = "README.md"
keywords = ["tui", "nftables", "netfilter", "firewall"]
categories = ["command-line-utilities"]
rust-version = "1.70"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
nftnl = "0.6"
ratatui = "0.26"
sudo = "0.6"